    system path, using pybuild.  setup.py now installs buildd-slave.tac in
    the lpbuildd package rather than data_files in order not to pollute the
    top level of a virtualenv.
  * Fall back to the package name from AC_INIT when expanding $(PACKAGE) in
    translation configuration files if no other definition can be found.

  [ William Grant ]
  * Fix inclusion of buildd-slave.tac in MANIFEST.in.
  * Fix check-implicit-pointer-functions symlink for new python-lpbuildd path.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 22 Nov 2017 15:24:06 +0000

launchpad-buildd (156) xenial; urgency=medium

  * Remove useless cwd argument passed to subprocess.check_call from
    Chroot.run.
  * Replace shell_escape function with shlex.quote (Python 3) or pipes.quote
    (Python 2).
  * Fix handling of null/empty-domain case in generate_pots.
  * Make Backend.run(cwd=) work, and refactor BuildLiveFS and BuildSnap to
    use it.  This fixes translation templates builds, which were assuming
    that this worked.
  * Remove executable bit from
    lpbuildd/target/generate_translation_templates.py.
  * Grant mac_admin and mac_override capabilities to LXD containers.  These
    are needed to load AppArmor profiles when installing the core snap
    (LP: #1730376).
  * Explicitly install udev when building snaps or livefses, to work around
    LP #1731519.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 13 Nov 2017 16:11:17 +0000

launchpad-buildd (155) xenial; urgency=medium

  * Refactor lpbuildd.pottery.intltool to avoid calling chdir.
  * Merge TranslationTemplatesBuildState.{INSTALL,GENERATE} into a single
    state.
  * Convert generate-translation-templates to the new Operation framework.
  * Use Python 3-style print functions.
  * Make urllib imports Python 3-compatible.
  * Make xmlrpc imports Python 3-compatible.
  * Make configparser imports Python 3-compatible.
  * Handle dict API changes in Python 3.
  * Raise more useful exceptions when LXD.copy_in or LXD.copy_out fail.